--- a/package.json
+++ b/package.json
@@ -1,17 +1,29 @@
 {
-  "name": "webdriverio-cucumber-e2e",
-  "version": "1.0.0",
-  "description": "webdriverio cucumber e2e",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "wdio",
-    "cucumber",
-    "e2e",
-    "test"
-  ],
-  "author": "Cristian Dávila",
-  "license": "ISC"
+    "name": "webdriverio-cucumber-e2e",
+    "version": "1.0.0",
+    "description": "webdriverio cucumber e2e",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "wdio": "wdio run wdio.conf.ts"
+    },
+    "keywords": [
+        "wdio",
+        "cucumber",
+        "e2e",
+        "test"
+    ],
+    "author": "Cristian Dávila",
+    "license": "ISC",
+    "devDependencies": {
+        "@wdio/allure-reporter": "^7.19.7",
+        "@wdio/cli": "^7.19.7",
+        "@wdio/cucumber-framework": "^7.19.7",
+        "@wdio/local-runner": "^7.19.7",
+        "@wdio/spec-reporter": "^7.19.7",
+        "chromedriver": "^101.0.0",
+        "ts-node": "^10.8.0",
+        "typescript": "^4.7.2",
+        "wdio-chromedriver-service": "^7.3.2"
+    }
 }
