--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "wdio": "wdio run wdio.conf.ts"
+        "wdio": "npx wdio wdio.conf.ts"
     },
     "keywords": [
         "wdio",
@@ -16,11 +16,13 @@
     "author": "Cristian Dávila",
     "license": "ISC",
     "devDependencies": {
+        "@types/chai": "^4.3.1",
         "@wdio/allure-reporter": "^7.19.7",
         "@wdio/cli": "^7.19.7",
         "@wdio/cucumber-framework": "^7.19.7",
         "@wdio/local-runner": "^7.19.7",
         "@wdio/spec-reporter": "^7.19.7",
+        "chai": "^4.3.6",
         "chromedriver": "^101.0.0",
         "ts-node": "^10.8.0",
         "typescript": "^4.7.2",
