--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
         "ts-node": "^10.8.0",
         "typescript": "^4.7.2",
         "wdio-chromedriver-service": "^7.3.2"
+    },
+    "dependencies": {
+        "dotenv": "^16.0.1"
     }
 }
