--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@wdio/spec-reporter": "^7.19.7",
         "chai": "^4.3.6",
         "chromedriver": "^101.0.0",
+        "prettier": "2.6.2",
         "ts-node": "^10.8.0",
         "typescript": "^4.7.2",
         "wdio-chromedriver-service": "^7.3.2"
