--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-url=https://the-internet.herokuapp.com
-##url=https://www.saucedemo.com
+##url=https://the-internet.herokuapp.com
+url=https://www.saucedemo.com
