some config wdio files

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
-url=https://the-internet.herokuapp.com
-##url=https://www.saucedemo.com
+##URL=https://the-internet.herokuapp.com
+URL=https://www.saucedemo.com
+# YES | NO
 HEADLESS=YES
+# YES info | NO error
+DEBUG=YES
