--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "wdio": "npx wdio wdio.conf.ts",
-        "tag": "npx wdio wdio.conf.ts --cucumberOpts.tagExpression",
-        "demo": "HEADLESS=N && npx wdio wdio.conf.ts --cucumberOpts.tagExpression='@demo'",
+        "test:tag": "npx wdio wdio.conf.ts --cucumberOpts.tagExpression",
+        "sauce:tag": "npx wdio config/wdio.saucedemo.conf.ts --cucumberOpts.tagExpression",
+        "test:demo": "npx wdio config/wdio.test.conf.ts --cucumberOpts.tagExpression='@demo'",
+        "sauce:demo": "npx wdio config/wdio.saucedemo.conf.ts --cucumberOpts.tagExpression='@sauceDemo'",
         "repl": "npx wdio repl chrome"
     },
     "keywords": [
