table in cucumber

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 ##URL=https://the-internet.herokuapp.com
 URL=https://www.saucedemo.com
 # YES | NO
-HEADLESS=YES
+HEADLESS=NO
 # YES info | NO error
 DEBUG=YES
