hooks, after step, screen shot in error

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 ##URL=https://the-internet.herokuapp.com
 URL=https://www.saucedemo.com
 # YES | NO
-HEADLESS=NO
+HEADLESS=YES
 # YES info | NO error
 DEBUG=YES
