--- a/.env
+++ b/.env
@@ -3,4 +3,6 @@ URL=https://www.saucedemo.com
 # YES | NO
 HEADLESS=YES
 # YES info | NO error
-DEBUG=YES
+DEBUG=NO
+# Winston logger
+LOG_LEVEL=debug
