--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 ##URL=https://the-internet.herokuapp.com
 URL=https://www.saucedemo.com
 # YES | NO
-HEADLESS=YES
+HEADLESS=NO
 # YES info | NO error
 DEBUG=NO
 # Winston logger
