--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "license": "ISC",
     "devDependencies": {
         "@types/chai": "^4.3.1",
+        "@types/supertest": "^2.0.12",
         "@wdio/allure-reporter": "^7.19.7",
         "@wdio/cli": "^7.19.7",
         "@wdio/cucumber-framework": "^7.19.7",
@@ -31,6 +32,7 @@
         "chai": "^4.3.6",
         "chromedriver": "^101.0.0",
         "prettier": "2.6.2",
+        "supertest": "^6.2.3",
         "ts-node": "^10.8.0",
         "typescript": "^4.7.2",
         "wdio-chromedriver-service": "^7.3.2",
