Login in sauce demo

--- a/.env
+++ b/.env
@@ -13,3 +13,9 @@ RUNNER=LOCAL
 #
 BASEAPIURL=https://reqres.in
 
+SAUCE_STANDARD_USER_USERNAME=standard_user
+SAUCE_STANDARD_USER_PASSWORD=secret_sauce
+SAUCE_PROBLEM_USER_USERNAME=problem_user
+SAUCE_PROBLEM_USER_PASSWORD=secret_sauce
+SAUCE_LOCKED_OUT_USER_USERNAME=locked_out_user
+SAUCE_LOCKED_OUT_USER_PASSWORD=secret_sauce
