--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "author": "Cristian Dávila",
     "license": "ISC",
     "devDependencies": {
+        "wdio-reportportal-reporter": "^7.0.0",
+        "wdio-reportportal-service": "^7.0.0",
         "@types/chai": "^4.3.1",
         "@types/supertest": "^2.0.12",
         "@wdio/allure-reporter": "^7.19.7",
