--- a/.github/workflows/wdio.ci.yml
+++ b/.github/workflows/wdio.ci.yml
@@ -34,4 +34,4 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Running smoke tests
-        run: npm run test:smoke
+        run: npm run test:sauceDemo
